--- a/styles/global.css
+++ b/styles/global.css
@@ -428,7 +428,7 @@ td[style*="background: var(--warning);"] a {
   gap: 20px;
   border: 3px solid var(--primary-color);
   color: var(--primary-color);
-  max-width: 600px;
+  max-width: min(600px, 100%);
   width: max-content;
   padding: 10px 20px;
   border-radius: var(--border-radius);
