--- a/styles/demo.css
+++ b/styles/demo.css
@@ -112,3 +112,52 @@ i.bx-sm {
 .line-through {
   text-decoration: line-through;
 }
+
+#navigationBar {
+  height: 70px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  color: var(--text-on-primary);
+  z-index: 500;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+#navigationBar div {
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: center;
+  background-color: var(--primary-color);
+  height: 100%;
+  font-size: 30px;
+}
+
+#sectionResults {
+  overflow: hidden;
+}
+
+#navigationBar button {
+  width: 100%;
+  margin: 8px 5px;
+  background-color: transparent;
+  border: none;
+  border-radius: 10px;
+  padding-bottom: 100px;
+}
+
+#navigationBar div:nth-child(3) {
+  height: 100px;
+  font-size: 45px;
+  border-radius: 10px;
+}
+
+#navigationBar div:nth-child(3) button {
+  width: 80%;
+}
+
+.activeTabBtn {
+  background-color: #fff !important;
+}
