--- a/styles/demo.css
+++ b/styles/demo.css
@@ -353,13 +353,14 @@ i.bx-sm {
 }
 
 #btn-go-to-updated-results-after-filter {
-  background-color: var(--secondary-color);
-  color: var(--text-on-secondary);
+  border: none;
   position: fixed;
   bottom: 70px;
   left: 0;
-  height: 50px;
+  height: 60px;
   width: 100%;
+  padding-bottom: 10px;
+  transform: translateY(0);
 }
 
 .flex-center {
@@ -371,4 +372,8 @@ i.bx-sm {
 
 #navigationBar i {
   vertical-align: middle;
+}
+
+.off-screen {
+  transform: translateY(50px) !important;
 }
