Fixed weird animation in finetuning table on when expanding party answers into fullscreen

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -420,3 +420,7 @@ i.bx-sm {
   transition: transform 3s;
   transform: translateY(0);
 }
+
+[id^="resultsByThesisQuestion"][id$="Container"] {
+  flex-direction: column;
+}
