--- a/styles/demo.css
+++ b/styles/demo.css
@@ -137,7 +137,7 @@ i.bx-sm {
 }
 
 #navigationBar button {
-  width: 100%;
+  width: min(70px, 100%);
   margin: 8px 5px;
   background-color: transparent;
   border: none;
@@ -145,8 +145,10 @@ i.bx-sm {
   padding-bottom: 100px;
 }
 
-#navigationBar div:nth-child(3) button {
-  width: 80%;
+.highlightedTabBtn {
+  height: 100px !important;
+  font-size: 45px !important;
+  border-radius: 10px;
 }
 
 .activeTabBtn {
@@ -205,7 +207,8 @@ i.bx-sm {
 
 .tabHeading {
   padding: 10px;
-  width: 100%;
+  width: min(100%, 600px);
+  margin: 0 auto;
 }
 
 #filtersContainer {
@@ -423,4 +426,27 @@ i.bx-sm {
 
 [id^="resultsByThesisQuestion"][id$="Container"] {
   flex-direction: column;
+}
+
+@media only screen and (min-width: 1024px) {
+  #navigationBar div:last-child {
+    border-radius: 0 10px 0 0;
+  }
+  #navigationBar div:first-child {
+    border-radius: 10px 0 0 0;
+  }
+
+  #navigationBar {
+    width: 600px;
+    margin: auto;
+    text-align: center;
+    left: calc(50% - 300px);
+    border-radius: 50%;
+  }
+}
+
+@media only screen and (min-width: 600px) {
+  .highlightedTabBtn button {
+    width: 100px !important;
+  }
 }
