--- a/styles/demo.css
+++ b/styles/demo.css
@@ -122,6 +122,7 @@ i.bx-sm {
   justify-content: center;
   align-items: center;
   background-color: var(--primary-color);
+  border-top: 2px solid #fff;
 }
 #navigationBar div {
   flex: 1 0 auto;
@@ -149,6 +150,7 @@ i.bx-sm {
   height: 100px !important;
   font-size: 45px !important;
   border-radius: 10px;
+  border: 2px solid #fff;
 }
 
 .activeTabBtn {
@@ -441,7 +443,9 @@ i.bx-sm {
     margin: auto;
     text-align: center;
     left: calc(50% - 300px);
-    border-radius: 50%;
+    border-radius: 10px 10px 0 0;
+    border: solid #fff;
+    border-width: 2px 2px 0 2px;
   }
 }
 
