--- a/styles/demo.css
+++ b/styles/demo.css
@@ -52,17 +52,17 @@
 :root {
   --body-font: "Merriweather Sans";
   --heading-font: "Merriweather Sans";
-  --primary-color: #deb841; /* Color of the card and some buttons. Should be rather dark. Main color of the website fits well. */
-  --text-on-primary: #000;
-  --link-color: #035c77; /* Usually same as main-color. Must be dark enough to be readable on white background. */
-  --secondary-color: #83a4af; /* Color of the start button, the "agree to statistics" and resultsByThesis/Parties buttons. Good contrast to main color. Maybe a green tone? */
+  --primary-color: #0d2c54; /* Color of the card and some buttons. Should be rather dark. Main color of the website fits well. */
+  --text-on-primary: #fff;
+  --link-color: #0d2c54; /* Usually same as main-color. Must be dark enough to be readable on white background. */
+  --secondary-color: #00a6ed; /* Color of the start button, the "agree to statistics" and resultsByThesis/Parties buttons. Good contrast to main color. Maybe a green tone? */
   --text-on-secondary: #000;
-  --success: #02394a; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
-  --text-on-success: #fff;
-  --warning: #035c77;
-  --text-on-warning: #fff;
-  --danger: #047b9f;
-  --text-on-danger: #fff;
+  --success: #7fb800; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
+  --text-on-success: #000;
+  --warning: #ffb400;
+  --text-on-warning: #000;
+  --danger: #f6511d;
+  --text-on-danger: #000;
   --passive-button-color: #eee; /* Could be grey */
   --border-radius: 5px;
   --display-made-with-love: none; /* "block" (label shown) or "none" (label hidden)  */
@@ -80,7 +80,7 @@ main {
 }
 
 #mainLogo {
-  height: 4rem;
+  height: 3rem;
 }
 
 /* Default is primary-color; yellow text on white background would have to little contrast*/
@@ -115,7 +115,6 @@ i.bx-sm {
   bottom: 0;
   left: 0;
   width: 100%;
-  color: var(--text-on-primary);
   z-index: 500;
   display: flex;
   flex-direction: row;
@@ -146,11 +145,33 @@ i.bx-sm {
   padding-bottom: 100px;
 }
 
+#navigationBar i {
+  color: var(--text-on-primary);
+}
+
+#navigationBar .activeTabBtn i {
+  color: #000;
+}
+
 .highlightedTabBtn {
   height: 100px !important;
   font-size: 45px !important;
   border-radius: 10px;
+  position: relative;
+}
+
+.highlightedTabBtn::after {
+  content: "";
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  right: -1px;
+  bottom: 0;
+  border-radius: 10px;
   border: 2px solid #fff;
+  box-sizing: border-box;
+  pointer-events: none;
+  clip-path: inset(0 0 84px 0);
 }
 
 .activeTabBtn {
