Display player number in result details via addon instead of hard-coded in csv

--- a/styles/demo.css
+++ b/styles/demo.css
@@ -521,3 +521,7 @@ i.bx-sm {
 .list-answers-and-filter-values-in-result-details > li {
   margin-top: 10px;
 }
+
+.card-header h2 {
+  width: 100%;
+}
