--- a/styles/demo.css
+++ b/styles/demo.css
@@ -1,73 +1,42 @@
-/* merriweather-sans-regular - latin */
+/* LexendDeca SemiBold normal Text */
 @font-face {
-   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-   font-family: "Merriweather Sans";
+   font-display: swap; 
+   font-family: "LexendDeca";
    font-style: normal;
    font-weight: 400;
    src:
-      url("../fonts/merriweather-sans-v26-latin-regular.woff2") format("woff2"),
+      url("../fonts/lexenddeca-semibold.woff2") format("woff2"),
       /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-         url("../fonts/merriweather-sans-v26-latin-regular.ttf")
+         url("../fonts/lexenddeca-semibold.ttf")
          format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
-/* merriweather-sans-italic - latin */
+/* LexendDeca Black Headlines */
 @font-face {
-   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-   font-family: "Merriweather Sans";
-   font-style: italic;
-   font-weight: 400;
-   src:
-      url("../fonts/merriweather-sans-v26-latin-italic.woff2") format("woff2"),
-      /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-         url("../fonts/merriweather-sans-v26-latin-italic.ttf")
-         format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-}
-
-/* merriweather-sans-700 - latin */
-@font-face {
-   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-   font-family: "Merriweather Sans";
+   font-display: swap; 
+   font-family: "LexendDeca";
    font-style: normal;
    font-weight: 700;
    src:
-      url("../fonts/merriweather-sans-v26-latin-700.woff2") format("woff2"),
+      url("../fonts/lexenddeca-black.woff2") format("woff2"),
       /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-         url("../fonts/merriweather-sans-v26-latin-700.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
+         url("../fonts/lexenddeca-black.ttf") format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
 }
 
-/* merriweather-sans-700italic - latin */
-@font-face {
-   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-   font-family: "Merriweather Sans";
-   font-style: italic;
-   font-weight: 700;
-   src:
-      url("../fonts/merriweather-sans-v26-latin-700italic.woff2")
-         format("woff2"),
-      /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-         url("../fonts/merriweather-sans-v26-latin-700italic.ttf")
-         format("truetype"); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-}
-
-/* General hint: If you have only one color from the website where Mitwirk-O-Mat will be embedded,
-   go to https://mycolor.space/ or https://coolors.co and look for fitting colors
-! check the contrast between the background colors and the color of the text on it for accessibility (WCAG AA is enough)
-   https://webaim.org/resources/contrastchecker/ */
 
 :root {
-   --body-font: "Merriweather Sans";
-   --heading-font: "Merriweather Sans";
-   --primary-color: #0d2c54; /* Color of the card and some buttons. Should be rather dark. Main color of the website fits well. */
+   --body-font: "LexendDeca";
+   --heading-font: "LexendDeca";
+   --primary-color: #2b388f; /* Color of the card and some buttons. Should be rather dark. Main color of the website fits well. */
    --text-on-primary: #fff;
-   --link-color: #0d2c54; /* Usually same as main-color. Must be dark enough to be readable on white background. */
-   --secondary-color: #00a6ed; /* Color of the start button, the "agree to statistics" and resultsByThesis/Parties buttons. Good contrast to main color. Maybe a green tone? */
+   --link-color: #2b388f; /* Usually same as main-color. Must be dark enough to be readable on white background. */
+   --secondary-color: #2b388f; /* Color of the start button, the "agree to statistics" and resultsByThesis/Parties buttons. Good contrast to main color. Maybe a green tone? */
    --text-on-secondary: #000;
-   --success: #7fb800; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
+   --success: #2b388f; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
    --text-on-success: #000;
-   --mix-success-warning: #bfb600; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
+   --mix-success-warning: #2b388f; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
    --text-on-mix-success-warning: #000;
-   --warning: #ffb400;
+   --warning: #2b388f;
    --text-on-warning: #000;
    --mix-warning-danger: #fb830f; /* For ranking bar and answer buttons. Ideally dark enough to read white text on it */
    --text-on-mix-warning-danger: #000;
